fix: use setAllowedOriginPatterns(*) to resolve 403 from any LAN IP
Agent-Logs-Url: https://github.com/genraven1/task-master/sessions/7b8c6e91-1ef8-442a-a758-3cb0504b185c

Co-authored-by: genraven1 <15988597+genraven1@users.noreply.github.com>